# Flowcontainer

./: .gitignore  README.md  build_image.py  pyproject.toml
Flowcontainer/: __init__.py  __main__.py  builder.py  cli.py  config.py  docker_client.py  logger.py
Flowcontainer/templates/: Dockerfile.template
images/: Dockerfile.template
test_pipeline/: README.md  Snakefile  workflow_config.yaml
test_pipeline/.snakemake/metadata/: cmVzdWx0cy9hdmFpbGFibGVfaW1hZ2VzLnR4dA==
